# elastic-stig-audit

./: .gitignore  CONTRIBUTING.md  CURRENT_STATE.md  LICENSE  Makefile  README.md  SECURITY.md  audit.py  pyproject.toml  runner.py
.github/workflows/: release.yml  test.yml
benchmarks/: CIS_Elasticsearch_Container_Benchmark_v1.0.md
checks/: __init__.py  auth_checks.py  authz_checks.py  base.py  cluster_checks.py  container_checks.py  cve_scanner.py  encryption_checks.py  logging_checks.py  network_checks.py
docs/: CVE_SCANNING.md  RUN_BENCHMARK.md
mappings/: frameworks.py
output/: bundle.py  report.py  sarif.py
test/: test_checks.py  test_cve_scanner.py  test_runner.py  test_sarif_output.py
